--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,8 +5,24 @@ body {
 }
 
 a {
-  /* color: #00B7FF; */
+  color: #88aab6;
   text-decoration: none;
+}
+
+img{
+  max-height: 100%;
+  object-fit:contain;
+}
+
+.title{
+  font-family: 'Tipolino';
+  font-size: 3rem;
+  color:rgb(106, 206, 240);
+}
+.subtitle{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1rem;
+  color:rgb(70, 138, 161);
 }
 
 .ads-container{
@@ -32,12 +48,30 @@ a {
   width: 200px;
 }
 
+.img-container{
+  display: flex;
+  justify-content: center;
+
+  height: 200px;
+  width: 180px;
+}
+
 .ad-title{
   font-size: 1.1rem;
+}
+
+.precio{
+  font-size: 1.5rem;
+  text-align: right;
+  width: 100%;
+  padding-right: 20px;
+  margin-bottom: 10px;
 }
 
 .tags{
   font-size: .75rem;
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
   color:darkgray;
+  /* text-align: left; */
+  /* width: 100%; */
 }
