--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,17 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1><a class="title" href="/"><%= title %></a></h1>
+    <p class="subtitle">Compra o vende</p>
     <div class="ads-container">
     <% anuncios.forEach( anuncio => {%>
       <div class="ad-container">
-          <%= (anuncio.venta) ? 'Se vende' : 'Se busca' %>:<br>
-          <span class="ad-title"><b><%= anuncio.nombre%></b></span><br>
-          <div style="height:180px;">
+          <%= (anuncio.venta) ? 'Se vende' : 'Se compra' %>:<br>
+          <span class="ad-title"><b><%= anuncio.nombre %></b></span><br>
+          <div class="img-container">
             <img src="/images/<%= anuncio.foto %>" width="180" alt=<%=anuncio.foto %> /><br>
           </div>
-          Precio: <%= anuncio.precio%> €<br><br>
+          <span class="precio"><%= anuncio.precio % 1 != 0 ? Intl.NumberFormat('es-ES', { style: 'currency', currency: 'EUR' }).format(anuncio.precio) : Intl.NumberFormat('es-ES').format(anuncio.precio)+' €' %></span>
           <span class="tags">Etiquetas: 
             <% anuncio.tags.forEach( tag => {
                %> <a href='/?tag=<%=tag%>'><%=tag%> </a><%
@@ -26,3 +26,4 @@
     </div>
   </body>
 </html>
+
