--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
           <div class="img-container">
             <img src="/images/<%= anuncio.foto %>" width="180" alt=<%=anuncio.foto %> /><br>
           </div>
-          <span class="precio"><%= anuncio.precio % 1 != 0 ? Intl.NumberFormat('es-ES', { style: 'currency', currency: 'EUR' }).format(anuncio.precio) : Intl.NumberFormat('es-ES').format(anuncio.precio)+' €' %></span>
+          <span class="precio"><%= anuncio.precio % 1 != 0 ? Intl.NumberFormat('de-DE', { style: 'currency', currency: 'EUR' }).format(anuncio.precio) : Intl.NumberFormat('de-DE').format(anuncio.precio)+' €' %></span>
           <span class="tags">Etiquetas: 
             <% anuncio.tags.forEach( tag => {
                %> <a href='/?tag=<%=tag%>'><%=tag%> </a><%
