--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><a class="title" href="/"><b><%= title %></a></b></h1>
-    <p class="subtitle">Compraventa a go-go</p>
+    <div class="title-container"><h1><a class="title" href="/"><b><%= title %></a></b></h1>
+    <p class="subtitle">Compraventa a go-go</p></div>
     <div class="ads-container">
     <% anuncios.forEach( anuncio => {%>
       <div class="ad-container">
