Formulario para añadir anuncio

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,13 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <div class="title-container"><h1><a class="title" href="/"><b><%= title %></a></b></h1>
-    <p class="subtitle">Compraventa a go-go</p></div>
+    <div class="title-container">
+      <h1><a class="title" href="/"><b><%= title %></a></b></h1>
+      <div class="subtitle-container">
+        <div class="subtitle">Compraventa a go-go</div><br>
+        <div><button id="myBtn" class="buttonAdd"><b>+</b> Añadir anuncio</button></div>
+      </div>
+    </div>
     <div class="ads-container">
     <% anuncios.forEach( anuncio => {%>
       <div class="ad-container">
@@ -24,6 +29,64 @@
         </div>
     <%}); %>
     </div>
+
+    <!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    
+    <form action="" method="POST">
+
+      <label for="nombre">Nombre</label>
+      <input type="text" name="nombre" class="form-input" id="nombre" placeholder="Artículo" required>
+      <label for="precio">Precio</label>
+      <div class="form2">
+        <input type="number" step="0.01" min="0" name="precio" id="precio" class="form-input" placeholder="0,00" required>
+        <select class="select-css" name="venta" id="venta">
+          <option value="true" selected>Vender</option>
+          <option value="false">Comprar</option>
+        </select>
+      </div>
+      <input type="hidden" name="foto" id="foto" value="none.png">
+      <label for="tags">Tags</label>
+      <input type="text" class="form-input" name="tags" id="tags" placeholder="Separados por comas" required>
+      <input type="hidden" value="form" name="form" id="form">
+      <br>
+      <button type="submit" class="buttonAdd">Enviar</button>
+  </form>
+  </div>
+
+</div>
+
   </body>
 </html>
 
+<script>
+  // Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
