--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,11 +35,11 @@
 
   <!-- Modal content -->
   <div class="modal-content">
-    <span class="close">&times;</span>
+    
     
     <form action="" method="POST">
 
-      <label for="nombre">Nombre</label>
+      <div class="first"><label for="nombre"><br>Nombre</label><span class="close">&times;</span></div>
       <input type="text" name="nombre" class="form-input" id="nombre" placeholder="Artículo" required>
       <label for="precio">Precio</label>
       <div class="form2">
