--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,7 +34,7 @@ a:visited{
   color: #1c8d7e;
 }
 img{
-  max-height: 100%;
+  width:180px;
   object-fit:contain;
 }
 
@@ -80,8 +80,8 @@ img{
 .ad-container{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   background-color: white;
   border-radius: 10px;
   margin-bottom: 2rem;
@@ -109,7 +109,7 @@ img{
 
 .ad-title{
   font-size: 1.1rem;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .precio{
