README.md actualizado y cambios menores

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,7 +80,7 @@ img{
 .ad-container{
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
   /* justify-content: center; */
   background-color: white;
   border-radius: 10px;
