--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -134,7 +134,8 @@ img{
   justify-content: space-between;
 }
 
-/* The Modal (background) */
+/* Código para el modal tomado de https://www.w3schools.com/howto/howto_css_modals.asp
+   The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
