--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,6 +64,7 @@
 </html>
 
 <script>
+  // Código para el modal tomado de https://www.w3schools.com/howto/howto_css_modals.asp
   // Get the modal
 var modal = document.getElementById("myModal");
 
