--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,6 +82,7 @@ img{
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
+  text-align: center;
   background-color: white;
   border-radius: 10px;
   margin-bottom: 2rem;
