--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,13 @@
           </div>
           <span class="precio"><%= anuncio.precio % 1 != 0 ? Intl.NumberFormat('de-DE', { style: 'currency', currency: 'EUR' }).format(anuncio.precio) : Intl.NumberFormat('de-DE').format(anuncio.precio)+' €' %></span>
           <span class="tags">Etiquetas: 
-            <% anuncio.tags.forEach( tag => {
-               %> <a href='/?tag=<%=tag%>'><%=tag%> </a><%
-            })%>
+            <% let i=0;
+              anuncio.tags.forEach( tag => {
+                const num= anuncio.tags.length;
+               %> <a href='/?tag=<%=tag%>'><%=tag%></a><%= (i!==num-1 ? ',' : '') %> <%
+               i++;
+            })
+            %>
           </span>
         </div>
     <%}); %>
