--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,6 +65,8 @@
     <%}); %>
     </div>
 
+
+    <% if(anuncios.length === 0){ %> <div style="width:100%; text-align: center; font-size: 1.3rem;">No se han encontrado artículos con ese criterio</div><% } %>
     <!-- The Modal -->
 <div id="myModal" class="modal">
 
