--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,7 +50,7 @@ img{
   background-color: white;
   padding: 20px;
   
-  margin-bottom: 10px;
+  margin-bottom: 50px;
   border-bottom: 3px;
   border-color: #26c0ac;
   border-style: hidden hidden solid hidden;
@@ -178,7 +178,7 @@ img{
   cursor: pointer;
 }
 
-.buttonAdd, .button-search{
+.buttonAdd{
   background-color: white;
   border-color: #109c8a;
   border-radius: 20px;
@@ -190,49 +190,32 @@ img{
   cursor: pointer;
 }
 
-.button-search{
-  font-size: .8rem;
-}
-
-.buttonAdd:hover, .button-search:hover{
+.buttonAdd:hover{
   
   background-color: #109c8a;
   color: white;
 }
 
-.buttonAdd:active, .button-search:active{
+.buttonAdd:active{
   background-color: white;
   color: #109c8a;
   transform: scale(.9);
   transition: transform .1s ease-in-out;
 }
 
-form-add{
+form{
   display: flex;
   font-size: 1rem;
   flex-direction: column;
 }
 
-.form-container{
-  display: flex;
-  flex-direction: row;
-  font-family: SanchezFont, Verdana;
-  justify-content: flex-end;
-  padding-right: 20px;
-  padding-bottom: 10px;
-}
-
-.form-input-add{
+.form-input{
   font-size: 1.2rem;
   border-radius: 5px;
   border-style: solid;
   border-color: lightgray;
   border-width: 1px;
   padding:.5rem;
-}
-
-.search-numbers{
-  width:3rem;
 }
 
 label{
