--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,6 +86,8 @@ img{
   background-color: white;
   border-radius: 10px;
   margin-bottom: 2rem;
+  margin-left:0.65rem;
+  margin-right:0.65rem;
   padding: 1rem;
   width: 200px;
 }
