--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,22 +7,29 @@
   <body>
     <div class="title-container">
       <h1><a class="title" href="/"><b><%= title %></a></b></h1>
+      
       <div class="subtitle-container">
-        <div class="subtitle">Compraventa a go-go</div><br>
-        <div><button id="myBtn" class="buttonAdd"><b>+</b> Añadir anuncio</button></div>
+        <div class="subtitle"><%= __('Happily Sell & Buy') %></div><br>
+        <div><button id="myBtn" class="buttonAdd"><b>+</b> <%= __('Add Advert') %></button></div>
+        <select style="width: 85px;" onchange="this.options[this.selectedIndex].value && (window.location = '/change-locale/'+this.options[this.selectedIndex].value);">
+          <option selected disabled><%= __('Language') %></option>
+          <% getLocales().forEach(locale => { %>
+            <!-- <a href='/change-locale/<%= locale %>' ><%= locale %> </a> &nbsp; -->
+            <option value=<%= locale %>><%= locale %></option>
+          <% }) %>
+        </select>
       </div>
     </div>
-
     <div class="ads-container">
     <% anuncios.forEach( anuncio => {%>
       <div class="ad-container">
-          <%= (anuncio.venta) ? 'Se vende' : 'Se compra' %>:<br>
+          <%= (anuncio.venta) ? __('Sale') : __('Buy') %>:<br>
           <span class="ad-title"><b><%= anuncio.nombre %></b></span><br>
           <div class="img-container">
             <img src="/images/<%= anuncio.foto %>" width="180" alt=<%=anuncio.foto %> /><br>
           </div>
           <span class="precio"><%= anuncio.precio % 1 != 0 ? Intl.NumberFormat('de-DE', { style: 'currency', currency: 'EUR' }).format(anuncio.precio) : Intl.NumberFormat('de-DE').format(anuncio.precio)+' €' %></span>
-          <span class="tags">Etiquetas: 
+          <span class="tags"><%= __n('Tags', anuncio.tags.length) %>: 
             <% anuncio.tags.forEach( tag => {
                %> <a href='/?tag=<%=tag%>'><%=tag%> </a><%
             })%>
@@ -40,22 +47,22 @@
     
     <form action="" method="POST">
 
-      <div class="first"><label for="nombre"><br>Nombre</label><span class="close">&times;</span></div>
-      <input type="text" name="nombre" class="form-input" id="nombre" placeholder="Artículo" required>
-      <label for="precio">Precio</label>
+      <div class="first"><label for="nombre"><br><%= __('Name') %></label><span class="close">&times;</span></div>
+      <input type="text" name="nombre" class="form-input" id="nombre" placeholder='<%= __('Article') %>' required>
+      <label for="precio"><%= __('Price') %></label>
       <div class="form2">
         <input type="number" step="0.01" min="0" name="precio" id="precio" class="form-input" placeholder="0,00" required>
         <select class="select-css" name="venta" id="venta">
-          <option value="true" selected>Vender</option>
-          <option value="false">Comprar</option>
+          <option value="true" selected><%= __('Sale') %></option>
+          <option value="false"><%= __('Buy') %></option>
         </select>
       </div>
       <input type="hidden" name="foto" id="foto" value="none.png">
-      <label for="tags">Tags</label>
-      <input type="text" class="form-input" name="tags" id="tags" placeholder="Separados por comas" required>
+      <label for="tags"><%= __('Tags') %></label>
+      <input type="text" class="form-input" name="tags" id="tags" placeholder='<%= __('Separated by commas') %>' required>
       <input type="hidden" value="form" name="form" id="form">
       <br>
-      <button type="submit" class="buttonAdd">Enviar</button>
+      <button type="submit" class="buttonAdd"><%= __('Publish') %></button>
   </form>
   </div>
 
