--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@
 html {
   box-sizing: border-box;
 }
- 
+
 *,
 *:before,
 *:after {
@@ -17,59 +17,60 @@ body {
   background-color: rgb(243, 242, 242);
   margin: 0;
   padding: 0;
-  font: 14px  Verdana, "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px Verdana, 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
 
 a {
   /* color: #88aab6; */
-  color:#26c0ac;
+  color: #26c0ac;
   text-decoration: none;
 }
 
-a:hover{
+a:hover {
   color: #30ebeb;
 }
 
-a:visited{
+a:visited {
   color: #1c8d7e;
 }
-img{
-  width:180px;
-  object-fit:contain;
+img {
+  width: 180px;
+  object-fit: contain;
 }
 
-.title{
+.title {
   font-family: SanchezFont, Verdana, 'Geneva';
   font-size: 4rem;
-  color:#26c0ac;
+  color: #26c0ac;
 }
 
-.title-container{
+.title-container {
   display: flex;
   justify-content: space-between;
   background-color: white;
   padding: 20px;
-  
+
   margin-bottom: 50px;
   border-bottom: 3px;
   border-color: #26c0ac;
   border-style: hidden hidden solid hidden;
 }
 
-.subtitle-container{
+.subtitle-container {
   display: flex;
   flex-direction: column;
 }
 
-.subtitle{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.subtitle {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 1rem;
-  color:rgb(38, 192, 172);
+  color: rgb(38, 192, 172);
   /* padding-top: 40px; */
   text-align: right;
 }
 
-.ads-container{
+.ads-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -77,7 +78,7 @@ img{
   padding: 5px;
 }
 
-.ad-container{
+.ad-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -86,23 +87,23 @@ img{
   background-color: white;
   border-radius: 10px;
   margin-bottom: 2rem;
-  margin-left:0.65rem;
-  margin-right:0.65rem;
+  margin-left: 0.65rem;
+  margin-right: 0.65rem;
   padding: 1rem;
   width: 200px;
 }
 
-.ad-container:hover{
+.ad-container:hover {
   /* transform: translate(0px, -10px); */
-  -webkit-box-shadow: 0px 7px 21px 5px rgba(0, 0, 0, .2);; 
-    box-shadow: 0px 7px 21px 5px rgba(0, 0, 0, .2);;
-    /* border-radius: 0px 0px 0px 0px; */
-    transform: scale(1.05);
-    transition: box-shadow .2s ease;
-    transition: transform .1s ease-in-out;
+  -webkit-box-shadow: 0px 7px 21px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 7px 21px 5px rgba(0, 0, 0, 0.2);
+  /* border-radius: 0px 0px 0px 0px; */
+  transform: scale(1.05);
+  transition: box-shadow 0.2s ease;
+  transition: transform 0.1s ease-in-out;
 }
 
-.img-container{
+.img-container {
   display: flex;
   justify-content: center;
   align-self: center;
@@ -110,29 +111,29 @@ img{
   width: 180px;
 }
 
-.ad-name{
+.ad-name {
   font-size: 1.1rem;
   /* text-align: center; */
   height: 2.2rem;
 }
 
-.precio{
+.precio {
   font-size: 1.5rem;
   text-align: right;
-  width:100%;
+  width: 100%;
   padding-right: 20px;
   margin-bottom: 10px;
 }
 
-.tags{
-  font-size: .75rem;
-  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
-  color:darkgray;
+.tags {
+  font-size: 0.75rem;
+  font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
+  color: darkgray;
   /* text-align: left; */
   /* width: 100%; */
 }
 
-.first{
+.first {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -149,8 +150,8 @@ img{
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
@@ -180,7 +181,7 @@ img{
   cursor: pointer;
 }
 
-.buttonAdd{
+.buttonAdd {
   background-color: white;
   border-color: #109c8a;
   border-radius: 20px;
@@ -192,42 +193,41 @@ img{
   cursor: pointer;
 }
 
-.buttonAdd:hover{
-  
+.buttonAdd:hover {
   background-color: #109c8a;
   color: white;
 }
 
-.buttonAdd:active{
+.buttonAdd:active {
   background-color: white;
   color: #109c8a;
-  transform: scale(.9);
-  transition: transform .1s ease-in-out;
+  transform: scale(0.9);
+  transition: transform 0.1s ease-in-out;
 }
 
-form{
+form {
   display: flex;
   font-size: 1rem;
   flex-direction: column;
 }
 
-.form-input{
+.form-input {
   font-size: 1.2rem;
   border-radius: 5px;
   border-style: solid;
   border-color: lightgray;
   border-width: 1px;
-  padding:.5rem;
+  padding: 0.5rem;
 }
 
-label{
-  padding: 1rem .5rem .3rem;
+label {
+  padding: 1rem 0.5rem 0.3rem;
 }
 
-.form2{
-  display:flex;
+.form2 {
+  display: flex;
   flex-direction: row;
-  width:100%;
+  width: 100%;
 }
 
 /* Estilo del select tomado de https://css-tricks.com/styling-a-select-like-its-2019/ */
@@ -238,14 +238,14 @@ label{
   font-weight: 550;
   color: #444;
   line-height: 1.3;
-  padding: .6em 1.4em .5em .8em;
+  padding: 0.6em 1.4em 0.5em 0.8em;
   width: 100%;
   max-width: 100%; /* useful when width is set to anything other than 100% */
   box-sizing: border-box;
   margin: 0;
   border: 1px solid #aaa;
-  box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
-  border-radius: .5em;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  border-radius: 0.5em;
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
@@ -255,12 +255,12 @@ label{
     
   */
   background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-    linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
   background-repeat: no-repeat, repeat;
   /* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
-  background-position: right .7em top 50%, 0 0;
+  background-position: right 0.7em top 50%, 0 0;
   /* icon size, then gradient */
-  background-size: .65em auto, 100%;
+  background-size: 0.65em auto, 100%;
 }
 /* Hide arrow icon in IE browsers */
 .select-css::-ms-expand {
@@ -274,30 +274,34 @@ label{
 .select-css:focus {
   border-color: #aaa;
   /* It'd be nice to use -webkit-focus-ring-color here but it doesn't work on box-shadow */
-  box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+  box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
   box-shadow: 0 0 0 3px -moz-mac-focusring;
-  color: #222; 
+  color: #222;
   outline: none;
 }
 
 /* Set options to normal weight */
 .select-css option {
-  font-weight:normal;
+  font-weight: normal;
 }
 
 /* Support for rtl text, explicit support for Arabic and Hebrew */
-*[dir="rtl"] .select-css, :root:lang(ar) .select-css, :root:lang(iw) .select-css {
-  background-position: left .7em top 50%, 0 0;
-  padding: .6em .8em .5em 1.4em;
+*[dir='rtl'] .select-css,
+:root:lang(ar) .select-css,
+:root:lang(iw) .select-css {
+  background-position: left 0.7em top 50%, 0 0;
+  padding: 0.6em 0.8em 0.5em 1.4em;
 }
 
 /* Disabled styles */
-.select-css:disabled, .select-css[aria-disabled=true] {
+.select-css:disabled,
+.select-css[aria-disabled='true'] {
   color: gray;
   background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22graytext%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-    linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
 }
 
-.select-css:disabled:hover, .select-css[aria-disabled=true] {
+.select-css:disabled:hover,
+.select-css[aria-disabled='true'] {
   border-color: #aaa;
 }
